--- a/feature_tracker/package.xml
+++ b/feature_tracker/package.xml
@@ -6,6 +6,7 @@
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
+  <maintainer email="chenpyhk@connect.hku.hk">dvorak</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
