--- a/config/esio_DSEC/esio.yaml
+++ b/config/esio_DSEC/esio.yaml
@@ -4,11 +4,8 @@
 
 event_left_topic: "/davis/left/events"
 event_right_topic: "/davis/right/events"
-
 imu_topic: "/imu/data"
 
-use_stereo: 1   
-use_stereo_event: 1
 system_mode: 0 # 0 for ESIO, 1 for ESVIO 
 
 output_path: "/home/cpy/Datasets/output"
@@ -21,7 +18,6 @@ event_right_calib: "event1_esvio.yaml"
 
 event_width: 640
 event_height: 480
-
 
 ###########################################################################################################################
 # Transformation between imu and left cam/event
@@ -85,11 +81,9 @@ feature_filter_threshold: 0.01
 
 #feature traker paprameters
 TS_LK_threshold: 128.0   # the feature detection is based on the time surface
-max_cnt: 220 #300            # max feature number in feature tracking event
-max_cnt_img: 200                       # max feature number in feature tracking image
-min_dist: 15 #10            # min distance between two event features 
-min_dist_img: 10 #10            # min distance between two image features 
-freq: 10 #20                # frequence (Hz) of publish tracking result. At least 10Hz for good estimation. If set 0, the frequence will be same as raw image 
+max_cnt: 300 #300            # max feature number in feature tracking event
+min_dist: 10 #10            # min distance between two event features 
+freq: 15 #20                # frequence (Hz) of publish tracking result. At least 10Hz for good estimation. If set 0, the frequence will be same as raw image 
 F_threshold: 1.0        # ransac threshold (pixel)
 show_track: 1           # publish tracking image as topic
 flow_back: 1            # perform forward and backward optical flow to improve feature tracking accuracy
@@ -97,7 +91,7 @@ equalize: 1             # if image is too dark or light, trun on equalize to fin
 fisheye: 0              # if using fisheye, trun on it. A circle mask will be loaded to remove edge noisy points
 Num_of_thread: 2        #number of the threads for the big event data process
 
-Do_motion_correction: 1 #whether use motion correction
+Do_motion_correction: 0 #whether use motion correction
 
 ###########################################################################################################################
 #optimization parameters
@@ -106,17 +100,17 @@ max_num_iterations: 8   # max solver itrations, to guarantee real time
 keyframe_parallax: 10.0 # keyframe selection threshold (pixel)
 
 ###########################################################################################################################
-acc_n: 0.2        # accelerometer measurement noise standard deviation. 
-gyr_n: 0.05       # gyroscope measurement noise standard deviation.     
-acc_w: 0.002      # accelerometer bias random work noise standard deviation. 
-gyr_w: 4.0e-5     # gyroscope bias random work noise standard deviation. 
-g_norm: 9.80766   # gravity magnitude
+acc_n: 0.3  #0.2  #4.4793336127290362e-02        # accelerometer measurement noise standard deviation. #0.2   0.04
+gyr_n: 0.075 #0.05 #3.1404034561189407e-03        # gyroscope measurement noise standard deviation.     #0.05  0.004
+acc_w: 0.003 #0.002 #8.0169405615955990e-04        # accelerometer bias random work noise standard deviation.  #0.002
+gyr_w: 6.0e-5 #4.0e-5 #2.8618210492185127e-05       # gyroscope bias random work noise standard deviation.     #4.0e-5
+g_norm: 9.80766     # gravity magnitude
 
 ###########################################################################################################################
 
 #unsynchronization parameters
 estimate_td: 1                      # online estimate time offset between camera and imu
-td: 0.008392591842193153 #0.00777437                # initial value of time offset. unit: s. readed image clock + td = real image clock (IMU clock)
+td: 0.0 #0.00777437                # initial value of time offset. unit: s. readed image clock + td = real image clock (IMU clock)
 
 #rolling shutter parameters
 rolling_shutter: 0                  # 0: global shutter camera, 1: rolling shutter camera
