--- a/config/esvio_ecmd/esvio.yaml
+++ b/config/esvio_ecmd/esvio.yaml
@@ -7,8 +7,8 @@ event_right_topic: "/DVXplorer_right/events"
 image_left_topic: "/camera_left/image_color"
 image_right_topic: "/camera_right/image_color"
 
-use_stereo: 1   #
-use_stereo_event: 1 #
+
+system_mode: 1 # 0 for ESIO, 1 for ESVIO
 
 output_path: "/home/cpy/Datasets/output"
 
