--- a/config/esvio_mvsec_flying/esvio.yaml
+++ b/config/esvio_mvsec_flying/esvio.yaml
@@ -9,8 +9,8 @@ event_right_topic: "/davis/right/events"
 image_left_topic: "/davis/left/image_raw"
 image_right_topic: "/davis/right/image_raw"
 
-use_stereo: 1   #
-use_stereo_event: 1 #
+
+system_mode: 1 # 0 for ESIO, 1 for ESVIO
 
 output_path: "/home/cpy/Datasets/output"
 
