--- a/feature_tracker/package.xml
+++ b/feature_tracker/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="qintonguav@gmail.com">dvorak</maintainer>
+  <maintainer email="chenpyhk@connect.hku.hk">dvorak</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
